fix(breadcrumbs,docs): fixed breadcrumbs overflow spacing and missing icons in docs

--- a/src/less/breadcrumbs/breadcrumbs.less
+++ b/src/less/breadcrumbs/breadcrumbs.less
@@ -34,8 +34,13 @@ nav.breadcrumbs > ul > li[hidden] {
 }
 
 nav.breadcrumbs > ul > li svg {
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+nav.breadcrumbs > ul > li svg.icon--chevron-right-12 {
+    margin-left: var(--spacing-75);
+    margin-right: var(--spacing-75);
 }
 
 nav.breadcrumbs > ul > li > a {
